--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head><base href="https://scholarsportal.github.io/Dataverse-Data-Curation-Tool/">
   <meta charset="utf-8">
   <title>Data Curation Tool</title>
-  
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <script type="text/javascript" src="/assets/js/json2xml.js"></script>
-  <script type="text/javascript" src="/assets/js/xml2json.js"></script>
+  <script type="text/javascript" src="assets/js/json2xml.js"></script>
+  <script type="text/javascript" src="assets/js/xml2json.js"></script>
 <link rel="stylesheet" href="styles.2ce3179e86b3ddd77ad0.css"></head>
 <body>
   <app-root></app-root>
